examples/vbcmn15/fail/reordWW.stl
/** reordRR **/
global x y; 
local l m; 

/** Optimised **/ 
write(x,l); 
write(y,m); 

/** Unoptimised **/ 
write(y,m); 
write(x,l); 
